@@ -228,7 +228,7 @@ class Fields extends \XoopsObject
         $fieldAttributesSelect->addOptionArray($helper->getHandler('Fieldattributes')->getList());
         $form->addElement(new Tdmcreate\Html\FormLabel('<td class="center">' . $fieldAttributesSelect->render() . '</td>'));
         // Field Null
-        $value           = (1 == $i && 1 == $tableAutoincrement) ? '2' : '2';
+        $value           = (1 == $i) && (1 == $tableAutoincrement) ? '2' : '2';
         $fieldNullSelect = new \XoopsFormSelect(_AM_TDMCREATE_FIELD_NULL, 'field_null[' . $i . ']', $value);
         $fieldNullSelect->addOptionArray($helper->getHandler('Fieldnull')->getList());
         $form->addElement(new Tdmcreate\Html\FormLabel('<td class="center">' . $fieldNullSelect->render() . '</td>'));
